objects/Conga_Metadata_Batch__c.object
<CustomObject>
    <fields>
        <fullName>Conga_Email_CC__c</fullName>
        <label>Conga Email CC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Subject__c</fullName>
        <label>Email Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Template_Id__c</fullName>
        <label>Email Template Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Run_Date_Time__c</fullName>
        <label>Last Run Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Merge_Record_Id__c</fullName>
        <label>Merge Record Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Run_Second_Job__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Run Second Job?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Second_Alias_Id__c</fullName>
        <label>Second Alias Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Second_File_Name__c</fullName>
        <label>Second File Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Second_Query_ID__c</fullName>
        <label>Second Query ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Second_Template_ID__c</fullName>
        <label>Second Template ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fileName__c</fullName>
        <label>fileName</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>queryAliasId__c</fullName>
        <label>queryAliasId</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>queryId__c</fullName>
        <label>queryId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>templateId__c</fullName>
        <label>templateId</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Conga Metadata Batch</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Email_Subject__c</columns>
        <columns>fileName__c</columns>
        <columns>Conga_Email_CC__c</columns>
        <columns>Last_Run_Date_Time__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Conga Batch Processing Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Conga Metadata Batch</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>